# solana-program-rosetta

./: .gitignore  Cargo.toml  README.md  install-solana.sh  test-c.sh  test-pinocchio.sh  test-zig.sh
.github/workflows/: main.yml
cpi/: Cargo.toml
cpi/c/: Makefile
cpi/c/src/: main.c
cpi/pinocchio/: Cargo.toml
cpi/pinocchio/src/: lib.rs
cpi/pinocchio/tests/: functional.rs
cpi/src/: lib.rs
cpi/tests/: functional.rs
cpi/zig/: build.zig  build.zig.zon  main.zig
helloworld/: Cargo.toml
helloworld/asm/: Makefile  main.s
helloworld/c/: Makefile
helloworld/c/src/: main.c
helloworld/src/: lib.rs
helloworld/tests/: functional.rs
helloworld/zig/: build.zig  build.zig.zon  main.zig
pubkey/: Cargo.toml
pubkey/src/: lib.rs
pubkey/tests/: functional.rs
pubkey/zig/: build.zig  build.zig.zon  main.zig
token/tests/: assert_instruction_count.rs
token/zig/: build.zig  build.zig.zon
token/zig/src/: error.zig  id.zig  instruction.zig  main.zig  state.zig
transfer-lamports/: Cargo.toml
transfer-lamports/asm/: Makefile  main.s
transfer-lamports/c/: Makefile
transfer-lamports/c/src/: main.c
transfer-lamports/pinocchio/: Cargo.toml
transfer-lamports/pinocchio/src/: entrypoint.rs  lib.rs  processor.rs
transfer-lamports/pinocchio/tests/: functional.rs
transfer-lamports/src/: entrypoint.rs  lib.rs  processor.rs
transfer-lamports/tests/: functional.rs
transfer-lamports/zig/: build.zig  build.zig.zon  main.zig
