[workspace]
members = [
  "cpi",
  "cpi/pinocchio",
  "helloworld",
  "token",
  "transfer-lamports",
  "transfer-lamports/pinocchio"
]
resolver = "2"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
