[package]
name = "solana-program-rosetta-helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-msg = "2.1"
solana-program-entrypoint = "2.1"

[dev-dependencies]
solana-instruction = "2.1"
solana-program-test = "2.1"
solana-pubkey = "2.1"
solana-sdk = "2.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
