[package]
name = "solana-program-rosetta-pubkey"
version = "1.0.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
solana-program-entrypoint = "2.1.0"
solana-pubkey = "2.1.0"

[dev-dependencies]
solana-instruction = "2.1.0"
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
