[package]
name = "pinocchio-rosetta-cpi"
version = "1.0.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
pinocchio = { version = "0.5", git = "https://github.com/febo/pinocchio.git", branch = "create-pda-unchecked" }
pinocchio-system = { version="0.1",  git = "https://github.com/febo/pinocchio.git", branch = "create-pda-unchecked" }

[dev-dependencies]
solana-program-test = "2.0.3"
solana-sdk = "2.0.3"

[lib]
crate-type = ["cdylib", "lib"]
